--- a/mongo-express.yaml
+++ b/mongo-express.yaml
@@ -28,13 +28,13 @@ spec:
         - name: ME_CONFIG_MONGODB_ADMINPASSWORD
           valueFrom:
             secretKeyRef:
-              name: mongo-secret
+              name: mongodb-secret
               key: mongo-root-password
         - name: ME_CONFIG_MONGODB_SERVER
           valueFrom:
             configMapKeyRef:
               name: mongodb-configmap
-              key: database-url
+              key: database_url
 ---
 apiVersion: v1
 kind: Service
