--- a/mongo.yaml
+++ b/mongo.yaml
@@ -31,7 +31,7 @@ spec:
               name: mongodb-secret
               key: mongo-root-password
 ---
-apiVerson: v1
+apiVersion: v1
 kind: Service
 metadata: 
   name: mongodb-service
